name:                async
synopsis:            Run IO operations asynchronously and wait for their results

description:
 This package provides a higher-level interface over
 threads, in which an @Async a@ is a concurrent
 thread that will eventually deliver a value of
 type @a@.  The package provides ways to create
 @Async@ computations, wait for their results, and
 cancel them.
 .
 Using @Async@ is safer than using threads in two
 ways:
 .
 * When waiting for a thread to return a result,
   if the thread dies with an exception then the
   caller must either handle the exception
   ('wait') or re-throw it ('waitThrow'); the
   exception cannot be ignored.
 .
 * The API makes it possible to build a tree of
   threads that are automatically killed when
   their parent dies (see 'withAsync').

version:             2.0.0.0
license:             BSD3
license-file:        LICENSE
author:              Simon Marlow
maintainer:          Simon Marlow <marlowsd@gmail.com>
copyright:           (c) Simon Marlow 2012
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.8
homepage:            https://github.com/simonmar/async
bug-reports:         https://github.com/simonmar/async/issues
tested-with:         GHC==7.0.3, GHC==7.2.2, GHC==7.4.1

extra-source-files:
    bench/race.hs

source-repository head
    type: git
    location: https://github.com/simonmar/async.git

library
    exposed-modules:     Control.Concurrent.Async
    build-depends:       base >= 4.3 && < 4.6, stm >= 2.2 && < 2.4

test-suite test-async
    type:       exitcode-stdio-1.0
    hs-source-dirs: test
    main-is:    test-async.hs
    build-depends: base >= 4.3 && < 4.6,
                   async,
                   test-framework,
                   test-framework-hunit,
                   HUnit
